# geoterm

./: .gitignore  .gitmodules  Cargo.toml  PROTOCOL.md  README.md
c/: shared.h
c/packets/: deserialize.h  serialize.c  serialize.h
c/ti84/: makefile
c/ti84/include/: msgpack.h
c/ti84/include/msgpack/: fbuffer.h  gcc_atomic.h  object.h  pack.h  pack_template.h  sbuffer.h  sysdep.h  timestamp.h  unpack.h  unpack_define.h  unpack_template.h  version.h  vrefbuffer.h  zbuffer.h  zone.h
c/ti84/map/: map.py  view.py
c/ti84/misc/: ti84-ez80-toolchain.cmake
c/ti84/src/: decompress.c  decompress.h  deserialize.c  deserialize.h  device.c  device.h  lobby.c  lobby.h  main.c  map.c  map.h  map.inc  round.c  round.h  serialize.c  serialize.h  utils.h
c/ti84/src/packets/: deserialize.c  deserialize.h  serialize.c  serialize.h
c/transponder/: .gitignore  cmp.c  cmp.h  deserialize.c  deserialize.h  main.c  makefile  serialize.h  transponder
client/: Cargo.toml
client/src/: logic.rs  main.rs  renderer.rs  ui.rs
client/src/ui/: loading.rs  lobby.rs  results.rs  round.rs
clients/ti84/: .clang-format  .gitignore  makefile
clients/ti84/src/: map.c  map.h  map.inc  round.c  shared.h  utils.c
clients/ti84/src/packets/: deserialize.c  serialize.c
clients/tui/: Cargo.toml
clients/tui/src/: logic.rs  ui.rs
clients/tui/src/ui/: loading.rs  results.rs  round.rs
misc/: demo.json
packets/: Cargo.toml
packets/src/: lib.rs
server/: Cargo.toml
server/src/: client.rs  error.rs  images.rs  lobby.rs  main.rs  round.rs  server.rs
server/src/images/: huggingface.rs
shared/: Cargo.toml
shared/src/: compression.rs  deserializers.rs  image.rs  lib.rs  lobby.rs  serializers.rs
transponder/: Cargo.toml
transponder/src/: main.rs  serial.rs  tcp.rs
transponders/tokio/: Cargo.toml
transponders/tokio/src/: tcp.rs
