[package]
name = "packets"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
futures = "0.3.31"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

tokio = { version = "1.47.1", features = ["io-util"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
