[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
eyre = "0.6.12"
futures = "0.3.31"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread", "io-util", "sync"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
ctrlc = "3.5.0"
reqwest = "0.12.23"
