[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
eyre = "0.6.12"
futures = "0.3.31"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread", "io-util", "sync"] }
ctrlc = "3.5.0"
reqwest = { version = "0.12.23" }
rand = "0.9.2"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "bmp"] }
geoutils = "0.5.1"
json = "0.12.4"
bytes = "1.10.1"
