[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
bytes = "1.10.1"
eyre = "0.6.12"
futures = "0.3.31"
image = "0.25.8"
thiserror = "2.0.17"
tokio = { version = "1.47.1", default-features = false, features = ["io-util"] }
tokio-util = { version = "0.7.16", default-features = false, features = ["io-util"] }
